Updated to use valueOf instead of new for boolean and Integer construction.